1999-02-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* about.cc: Add #include <libintl.h>.
	(_): Defined to use gettext.

	* main.cc: Add #include <libintl.h>.
	(_): Defined.

	* Makefile.am (INCLUDES): Add -DLOCALEDIR=....

1999-02-05  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (data_DATA): Added.

1999-02-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Updated.

	* NEWS: Updated.

	* Makefile.am (INCLUDES): Remove -DSESSION.

	* about.cc: Remove #define ENABLE_TRANSIENT_FOR_HINT.

	* configure.in: Add options: --disable-wm-command and
	--disable-wm-transient-for.
	* acconfig.h: Add entries for SESSION and
	ENABLE_TRANSIENT_FOR_HINT.

	* about.cc (about_dialog): Use asprintf/sprintf for gettext
	migration later.
	(populate): Make the version string using asprintf/sprintf.

1999-02-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Version 1.2.1.

	* NEWS: Updated.

1999-02-02  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* about.cc (about_dialog): Set the window title.
	(about_dialog): Position the window to center.
	(populate): Set the default to the OK button.
	(about_dialog): Construct the title string on the fly.
	(_): Defined for later gettext migration.
	(populate): Mark "OK" as a translation string.

	* about.cc (show): Remove the argument and use the parent_widget
	member.
	(show): Remove connect/disconnect for "configure_event".
	(about_dialog): Add an argument for the parent_widget
	initialization.
	(about_dialog): Connect "configure_event" to the handler.
	(handle_configure_event): Change the cast of the callback data to
	about_dialog *.
	(populate): Set the expand arg of the OK button to FALSE.

	* glclock.h (class about_dialog): Add member: parent_widget.

	* about.cc (handle_configure_event): Made to a static member.

	* glclock.h (class about_dialog): Add static members.

	* about.cc (handle_ok): Made to a static member.
	(show): Handle the case of parent == NULL.
	(handle_delete_event): New method.