@@ -1,2 +1,3 @@
 main.cc
+glclock.cc
 about.cc
